// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:Link:LinkExternal matches the snapshot when format is desktopFooter 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Museo Sans Cyrl 500';
  color: #ffffff;
  cursor: pointer;
  font-size: 18px;
  font-weight: 500;
  opacity: 0.6;
  height: 25px;
}

<a
  className="c0"
  format="desktopFooter"
/>
`;

exports[`components:Link:LinkExternal matches the snapshot when format is desktopSection 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Museo Sans Cyrl 500';
  border-radius: 5px;
  border: solid 3px #ffffff;
  font-size: 16px;
  font-weight: 900;
  opacity: 0.5;
  height: 58px;
  width: 450px;
}

<a
  className="c0"
  format="desktopSection"
/>
`;

exports[`components:Link:LinkExternal matches the snapshot when format is mobileFooter 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Museo Sans Cyrl 500';
  color: #ffffff;
  cursor: pointer;
  font-size: 15px;
  font-weight: 500;
  opacity: 0.5;
  height: 18px;
}

<a
  className="c0"
  format="mobileFooter"
/>
`;

exports[`components:Link:LinkExternal matches the snapshot when format is mobileSection 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Museo Sans Cyrl 500';
  border-radius: 5px;
  border: solid 3px #ffffff;
  font-size: 16px;
  font-weight: 900;
  opacity: 0.5;
  height: 58px;
  width: 260px;
}

<a
  className="c0"
  format="mobileSection"
/>
`;

exports[`components:Link:LinkExternal matches the snapshot when format is tabletFooter 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Museo Sans Cyrl 500';
  color: #ffffff;
  cursor: pointer;
  font-size: 15px;
  font-weight: 500;
  opacity: 0.6;
  height: 25px;
}

<a
  className="c0"
  format="tabletFooter"
/>
`;

exports[`components:Link:LinkExternal matches the snapshot when format is tabletSection 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Museo Sans Cyrl 500';
  border-radius: 5px;
  border: solid 3px #ffffff;
  font-size: 16px;
  font-weight: 900;
  opacity: 0.5;
  height: 58px;
  width: 260px;
}

<a
  className="c0"
  format="tabletSection"
/>
`;
